--- a/tasks/static/css/styles.css
+++ b/tasks/static/css/styles.css
@@ -4,7 +4,7 @@
 
 /* Navbar */
 
-.navbar {
+.navbar  {
     border-bottom: 1px solid #333;
     margin-bottom: 20px;
 }
@@ -22,9 +22,72 @@
     letter-spacing: 1px;
 }
 
-/* Lisra de Tarefas */
+/* Botão de adicionar */
 
+.add-div {
+    background-color: #3476e2;
+    cursor: pointer;
+    display: inline-block;
+    color: #FFF;
+    padding: 8px;
+    border-radius: 5px;
+    margin-right: 25px;
+}
 
+.fas.fa-plus {
+    color: #FFF;
+    margin-right: 10px;
+    margin-left: 5px;
+}
+
+/* Search */
+
+.fas.fa-search {
+    position: absolute;
+    top: 12px;
+    right: 26px;
+}
+
+.search-div {
+    padding: 0;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    display: inline-block;
+}
+
+/* Lista de tarefas */
+
+.list-div {
+    padding: 0;
+}
+
+.task-list {
+    padding-left: 0;
+}
+
+.task-item {
+    list-style: none;
+    font-size: 20px;
+    height: 50px;
+    padding-top: 10px;
+    border-bottom: 1px dashed #CCC;
+}
+
+.fas.fa-trash {
+    color: #db1e47;
+    cursor: pointer;
+    margin: 5px;
+    font-size: 20px;
+    float: right;
+}
+
+.fas.fa-edit {
+    color: #13c43f;
+    cursor: pointer;
+    margin: 5px;
+    font-size: 20px;
+    float: right;
+}
 
 /* Rodapé */
 
@@ -38,5 +101,5 @@ footer p {
     color: #f5f5f5;
     text-align: center;
     top: 50%;
+    position: relative;
 }
-
